[package]
name = "numass"
version = "0.1.1"
edition = "2021"

[dependencies]
protobuf = "3.2.0"
serde = { version = "1.0.147", features = ["derive"] }
chrono = { version = "0.4.22", features = ["serde"] }
serde_json = "1.0.87"
serde_with = "2.0.1"
serde_repr = "0.1.9"

[dev-dependencies]
dataforge = { git = "ssh://git@bitbucket.org/Kapot/dataforge-parser-rust.git", tag = "0.1.1" }

[build-dependencies]
protobuf-codegen = "3.2.0"


