[package]
name = "numass"
version = "0.1.3"
edition = "2021"

[dependencies]
protobuf = "3.2.0"
serde = { version = "1.0.163", features = ["derive"] }
chrono = { version = "0.4.22", features = ["serde"] }
serde_json = "1.0.87"
serde_with = "3.0.0"
serde_repr = "0.1.9"
rmp-serde = "1.1.1"

[dev-dependencies]
dataforge = { git = "https://bitbucket.org/Kapot/dataforge-parser-rust.git", tag = "0.1.3" }

[build-dependencies]
protobuf-codegen = "3.2.0"

[patch."https://bitbucket.org/Kapot/dataforge-parser-rust.git"]
dataforge = { path = "../dataforge-parser-rust" }
