[package]
name = "numass"
version = "0.1.3"
edition = "2021"

[dependencies]
protobuf = "3.7.1"
serde = { version = "1.0.163", features = ["derive"] }
chrono = { version = "0.4.22", features = ["serde"] }
serde_json = "1.0.87"
serde_with = "3.0.0"
serde_repr = "0.1.9"
rmp-serde = "1.1.1"

[dev-dependencies]
dataforge = { git = "https://github.com/kapot65/dataforge-parser-rust.git" }

[build-dependencies]
protobuf-codegen = "3.7.1"

[patch."https://github.com/kapot65/dataforge-parser-rust.git"]
dataforge = { path = "../dataforge-parser-rust" }
